--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -37,12 +37,13 @@
 @if (TempData["Error"] != null)
 {
     <script>
-        alert("@TempData["Error"]");
+        alert(@Html.Raw(Json.Serialize(TempData["Error"])));
     </script>
 }
+
 @if (TempData["Success"] != null)
 {
     <script>
-        alert("@TempData["Success"]");
+        alert(@Html.Raw(Json.Serialize(TempData["Success"])));
     </script>
 }
