--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,8 +26,13 @@
                     <a asp-controller="Category" asp-action="Index" class="list-group-item list-group-item-action bg-transparent second-text ps-5" title="Category">
                         <i class="bi bi-tags-fill me-2 small"></i> <span class="menu-text">Category</span>
                     </a>
+                    
                     <a asp-controller="Product" asp-action="Index" class="list-group-item list-group-item-action bg-transparent second-text ps-5" title="Product">
                         <i class="bi bi-box-seam-fill me-2 small"></i> <span class="menu-text">Product</span>
+                    </a>
+
+                    <a asp-controller="ProductEntry" asp-action="Index" class="list-group-item list-group-item-action bg-transparent second-text ps-5" title="Product Entry">
+                        <i class="bi bi-receipt me-2 small"></i> <span class="menu-text">Product Entry</span>
                     </a>
                 </div>
 
